tests/ui/const-generics/associated-const-bindings/esc-bound-var-in-ty.stderr
error: `unsized_const_params` requires `adt_const_params` to be enabled
  --> $DIR/esc-bound-var-in-ty.rs:5:5
   |
LL |     unsized_const_params,
   |     ^^^^^^^^^^^^^^^^^^^^
   |
   = help: enable all of these features

error: the type of the associated constant `K` cannot capture late-bound generic parameters
  --> $DIR/esc-bound-var-in-ty.rs:15:35
   |
LL | fn take(_: impl for<'r> Trait<'r, K = const { &() }>) {}
   |                     --            ^ its type cannot capture the late-bound lifetime parameter `'r`
   |                     |
   |                     the late-bound lifetime parameter `'r` is defined here
   |
   = note: `K` has type `&'r ()`

error: aborting due to 2 previous errors

